--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="right">
-                    <a href="#"> <button id="btn-right" class="btn btn-primary">Contact</button> </a>
+                    <a href="/js/app.js"> <button id="btn-right" class="btn btn-primary">Contact</button> </a>
                 </div>
             </nav>
         </div>
