--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="./images/logo.PNG" width="200px" height="56.4px">
                 </div>
                 <div class="left flex items-center">
-                    <div>
+                    <div class="navbar items-center">
                         <a href="#introduction">HOME</a>
                         <a href="#ab">ABOUT</a>
                         <a href="#projects">PROJECTS</a>
@@ -46,10 +46,7 @@
             </div>
 
             <div class="right flex-1">
-                <img src="./images/webdesigner.png" height="500px">
-            </div>
-            <div class="icon">
-                <i class="ico ico-facebook"></i>
+                <img src="./images/webdesigner.png">
             </div>
         </div>
     </header>
@@ -60,13 +57,13 @@
                 <img src="images/developers.png" height="550px" width="800px">
             </div>
 
-            <div class="flex-1">
+            <div class="abouttext flex-1">
                 <h1>About <span> Me</span></h1>
                 <h3>Hello, I'am Vanshita Manral</h3>
                 <p>
                     I am a passionate engineer, trying to put my knowledge and skills to solve real world problems.
                     <br>
-                    <button class="btn btn-secondary">DOWNLOAD RESUME</button>
+                    <a href="docResume/VanshitaManral_Resume.pdf" download="Vanshita_Manral" class="dwd"><button class="btn btn-secondary" id="downloadbutton">DOWNLOAD RESUME</button></a>
                     <div class="social">
                         <a href="#"><img src="images/instagram.svg"></a>
                         <a href="https://www.linkedin.com/in/vanshita-manral-020979177/"><img src="images/linkedin.svg"></a>
